v0.6.6.dev - ??

  - py 3.3 and py 2.6 support dropped 
  - collision manager honors promises to accept non-known objects, #300
  - fix loading tmx tilesets composed of individual tile elements, #301
  
v0.6.5 - August 24, 2017

  - First cocos release compatible with pyglet 1.3 (tested against 1.3.0rc1)
  - Fix cocos.draw compatibility with pyglet master, #288  
  - Fix Cannot pass keyword args to pyglet.Sprite, #274
  - Fix issue HMTLLabel does not show img, #276
  - fix bad texture clamping in tiles, crashing sometimes, #272 thanks FluffyInkie 

v0.6.4 - June 12, 2016

  - moved SequenceScene from cocos.utils to cocos.scenes.sequences
  - clean-up automatic event registration #268, #269
  - new interface for easy customize fps stats, #255
  - particle systems can have a per-instance custom texture, #264
  - fix traceback in test_tmx_hexmap.py with py35, #263
  - autocompletion friendly, #261
  - fix changes in pyglet.sprite.Sprite properties break cocos Sprites #260
  - fix Particle size_var isn't used, #259
  - fix RichLabel keyword halign to align, #258
  - fix active scene not always the top node in the scenegraph, #254
  - fixed ScrollingManager scale makes the image jitter, #253
  - * RectMapCollider.collide_map and .do_collision now take dx, dy instead of dy, dx
  - fixed RectMapCollider stuck sometimes, #238
  - * Rect.intersects behavior change: now points on border do not count, only interior ones
  - support the variants 'csv', 'xml', 'base64(uncompressed)' for .tmx tiles layer data, #243
  - fix position for TmxObject when type is 'tile', #245, thanks ottopotto for bug report
  - fix JumpTiles3D, typo introduced in pep8 refactor bf6dce6d, thanks dossjh
  - fix tmx tileset num rows - columns with nonzero separation, ( adc7054c7 )

v0.6.3 - April 26, 2015

  - support for 'spacing' in .tmx's tilesets
  - support to load (some) .tmx maps with hexagonal tiles
  - support collisions between CircleShape and AARectShape in collision_model, 